--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
             </goals>
             <configuration>
               <url>https://download.geofabrik.de/europe/germany-latest.osm.pbf</url>
-              <outputFileName>foo.bar</outputFileName>
+              <outputFileName>germany-latest.osm.pbf</outputFileName>
               <outputDirectory>${project.build.directory}</outputDirectory>
             </configuration>
           </execution>
