--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,8 @@ jobs:
       run: mvn clean install
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@v2.0.1
+    # - name: Update dependency graph
+    #  uses: advanced-security/maven-dependency-submission-action@v2.0.1
 
     - name: Log in to the Container registry
       uses: docker/login-action@v2.1.0
