--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -29,9 +29,8 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    # - name: Update dependency graph
-    #  uses: advanced-security/maven-dependency-submission-action@v2.0.1
+    - name: Build graph
+      run: java -Xmx2500m -Xms2500m -Ddw.graphhopper.prepare.ch.weightings=no -Ddw.graphhopper.datareader.file=target/germany-latest.osm.pbf -Ddw.graphhopper.graph.location=target/graph-cache -jar railway_routing-0.0.1-SNAPSHOT.jar import config.yml
 
     - name: Log in to the Container registry
       uses: docker/login-action@v2.1.0
