--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -30,7 +30,7 @@ jobs:
       run: mvn clean install
 
     - name: Build graph
-      run: java -Xmx2500m -Xms2500m -Ddw.graphhopper.prepare.ch.weightings=no -Ddw.graphhopper.datareader.file=target/germany-latest.osm.pbf -Ddw.graphhopper.graph.location=target/graph-cache -jar railway_routing-0.0.1-SNAPSHOT.jar import config.yml
+      run: java -Xmx2500m -Xms2500m -Ddw.graphhopper.prepare.ch.weightings=no -Ddw.graphhopper.datareader.file=target/germany-latest.osm.pbf -Ddw.graphhopper.graph.location=target/graph-cache -jar target/railway_routing-0.0.1-SNAPSHOT.jar import config.yml
 
     - name: Log in to the Container registry
       uses: docker/login-action@v2.1.0
