--- a/config.yml
+++ b/config.yml
@@ -22,7 +22,23 @@ flagEncoderProperties:
     voltages: 15000;25000;1500;3000
     frequencies: 16.7;16.67;50;0
     gauges: 1435
-    maxspeed: 310
+    maxspeed: 300
+    speed_factor: 11
+  - name: el_spd_100
+    railway: rail
+    electrified: contact_line,yes
+    voltages: 15000;25000;1500;3000
+    frequencies: 16.7;16.67;50;0
+    gauges: 1435
+    maxspeed: 100
+    speed_factor: 11
+  - name: el_spd_90
+    railway: rail
+    electrified: contact_line,yes
+    voltages: 15000;25000;1500;3000
+    frequencies: 16.7;16.67;50;0
+    gauges: 1435
+    maxspeed: 90
     speed_factor: 11
   - name: ne_spd_250
     railway: rail
@@ -44,7 +60,7 @@ graphhopper:
 
   # This property determines which flag encoders are enabled. You can use the hardcoded flag encoder configurations
   # or any of the encoders defined with flagEncoderProperties
-  graph.flag_encoders: el_spd_320|turn_costs=true|u_turn_costs=300,el_spd_310|turn_costs=true|u_turn_costs=300,el_spd_300|turn_costs=true|u_turn_costs=300,ne_spd_250|turn_costs=true|u_turn_costs=300,ne_spd_240|turn_costs=true|u_turn_costs=300
+  graph.flag_encoders: el_spd_320|turn_costs=true|u_turn_costs=300,el_spd_310|turn_costs=true|u_turn_costs=300,el_spd_300|turn_costs=true|u_turn_costs=300,el_spd_300|turn_costs=true|u_turn_costs=300,el_spd_100|turn_costs=true|u_turn_costs=90,ne_spd_250|turn_costs=true|u_turn_costs=300,ne_spd_240|turn_costs=true|u_turn_costs=300
   # Define routing profiles to offer (
   ##### Routing Profiles ####
 
@@ -84,6 +100,16 @@ graphhopper:
       weighting: fastest
       turn_costs: true
       u_turn_costs: 300
+    - name: el_spd_100
+      vehicle: el_spd_100
+      weighting: fastest
+      turn_costs: true
+      u_turn_costs: 300
+    - name: el_spd_90
+      vehicle: el_spd_90
+      weighting: fastest
+      turn_costs: true
+      u_turn_costs: 300
     - name: ne_spd_250
       vehicle: ne_spd_250
       weighting: fastest
@@ -105,6 +131,8 @@ graphhopper:
     - profile: el_spd_320
     - profile: el_spd_310
     - profile: el_spd_300
+    - profile: el_spd_100
+    - profile: el_spd_90
     - profile: ne_spd_250
     - profile: ne_spd_240
   profiles_lm: []
