--- a/config.yml
+++ b/config.yml
@@ -236,7 +236,7 @@ server:
   - type: http
     port: 8989
     # for security reasons bind to localhost
-    bind_host: localhost
+    # bind_host: localhost
   request_log:
       appenders: []
   admin_connectors:
